# WebStudioPro-

./: README.md  app.py  forms.py  manage.py  models.py  pyproject.toml  requirements.txt  routes.py  seed_database.py
app/: __init__.py  models.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/static/css/: style.css
app/templates/: add_lecture.html  base.html  content_detail.html  course_detail.html  index.html
instance/: site.db
migrations/versions/: d5e60f3bd9df_add_lecture_model.py
static/css/: custom.css
static/js/: script.js
templates/: add_content.html  base.html  categories.html  category_content.html  content.html  courses.html  create_test.html  dashboard.html  index.html  lecture_detail.html  lectures.html  login.html  presentation_detail.html  presentations.html  register.html  take_test.html  test_detail.html  tests.html
